--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>To-Do List</title>
+    </head>
     <body>
         <h1>Start a new To-Do list</h1>
-        <form method="POST">
+        <form method="POST" action"/lists/{{ list.id }}/add_item">
             <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
             {% csrf_token %}
         </form>
